--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -8,14 +8,9 @@ on:
       - main
 
 jobs:
-  ci:
+  docker:
     runs-on: ubuntu-latest
     steps:
-
-      - name: Shorten commit id
-        shell: bash
-        run: |
-          echo "COMMIT_ID=${GITHUB_SHA::6}" >> "$GITHUB_ENV"
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -27,6 +22,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: vinaysaroha/python-app:${{ env.COMMIT_ID }}
-    outputs:
-      commit_id: ${{ env.COMMIT_ID }}
+          tags: vinaysaroha/python-app:${{ github.sha }}
