--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -8,9 +8,14 @@ on:
       - main
 
 jobs:
-  docker:
+  ci:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Shorten commit id
+        shell: bash
+        run: |
+          echo "COMMIT_ID=${GITHUB_SHA::6}" >> "$GITHUB_ENV"
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -22,4 +27,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: vinayrhcsacertified/python-app:${{ github.sha }}
+          tags: ricardoandre9707/python-app:${{ env.COMMIT_ID }}
+    outputs:
+      commit_id: ${{ env.COMMIT_ID }}
