--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 image:
   repository: vinayrhcsacertified/python-app
   pullPolicy: IfNotPresent
-  tag: 4676e0
+  tag: dfe8b7
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
